
[package]
name = "num_alias"
version = "0.1.2"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
repository = "https://github.com/kngwyu/num-alias"
keywords = ["macro", "alias", "convinience"]
license = "MIT"
readme = "README.md"
description = "simple macros to declare 'type checked' aliases for integers and floats."

[dependencies]
